# packages/backend/tsoa/swagger.json
@@ -10,12 +10,10 @@
 			"Card": {
 				"properties": {
 					"id": {
-						"type": "number",
-						"format": "double"
+						"type": "string"
 					},
 					"columnId": {
-						"type": "number",
-						"format": "double"
+						"type": "string"
 					},
 					"description": {
 						"type": "string"
@@ -32,8 +30,7 @@
 			"Column": {
 				"properties": {
 					"id": {
-						"type": "number",
-						"format": "double"
+						"type": "string"
 					},
 					"columnName": {
 						"type": "string"
@@ -75,8 +72,7 @@
 			"Pick_Card.Exclude_keyofCard.id__": {
 				"properties": {
 					"columnId": {
-						"type": "number",
-						"format": "double"
+						"type": "string"
 					},
 					"description": {
 						"type": "string"
@@ -93,8 +89,23 @@
 				"$ref": "#/components/schemas/Pick_Card.Exclude_keyofCard.id__",
 				"description": "Construct a type with the properties of T except for those in type K."
 			},
-			"CardCreationRequest": {
+			"CardCreationRequestDTO": {
 				"$ref": "#/components/schemas/Omit_Card.id_"
+			},
+			"Partial_Card_": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"columnId": {
+						"type": "string"
+					},
+					"description": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"description": "Make all properties in T optional"
 			}
 		},
 		"securitySchemes": {}
@@ -184,8 +195,33 @@
 						"name": "columnId",
 						"required": true,
 						"schema": {
-							"format": "double",
-							"type": "number"
+							"type": "string"
+						}
+					}
+				]
+			},
+			"delete": {
+				"operationId": "DeleteColumnById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Column"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "columnId",
+						"required": true,
+						"schema": {
+							"type": "string"
 						}
 					}
 				]
@@ -235,7 +271,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/CardCreationRequest"
+								"$ref": "#/components/schemas/CardCreationRequestDTO"
 							}
 						}
 					}
@@ -270,8 +306,69 @@
 						"name": "cardId",
 						"required": true,
 						"schema": {
-							"format": "double",
-							"type": "number"
+							"type": "string"
+						}
+					}
+				]
+			},
+			"put": {
+				"operationId": "EditCardById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Card"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "cardId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/Partial_Card_"
+							}
+						}
+					}
+				}
+			},
+			"delete": {
+				"operationId": "DeleteCardById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Card"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "cardId",
+						"required": true,
+						"schema": {
+							"type": "string"
 						}
 					}
 				]
