# packages/shared-models/src/Card.ts
@@ -1,10 +1,10 @@
 export class Card {
-    public readonly id: number;
-    public readonly columnId: number;
+    public readonly id: string;
+    public readonly columnId: string;
 
     public description: string;
 
-    constructor(id: number, columnId: number, description: string) {
+    constructor(id: string, columnId: string, description: string) {
         this.id = id;
         this.columnId = columnId;
         this.description = description;
