# packages/shared-utils/src/api-dto-type.ts
@@ -1,8 +1,10 @@
 import {Column} from "@app/shared-models/src/Column";
+import {Card} from "@app/shared-models/src/Card";
 
 ////////////////////
 // API request type
 export type ColumnCreationRequestDTO = Omit<Column, 'id' | 'cards'>;
+export type CardCreationRequestDTO = Omit<Card, 'id'>;
 
 
 //////////////////////////////////////////////////////////////////////////////////////////////////
